--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "create-local": "graph create --node http://localhost:8020/ breadchaincoop/bread-polygon",
     "remove-local": "graph remove --node http://localhost:8020/ breadchaincoop/bread-polygon",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 breadchaincoop/bread-polygon",
-    "test": "graph test"
+    "test": "graph test",
+    "coverage": "graph test -- -c"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.46.1",
     "@graphprotocol/graph-ts": "0.29.1"
   },
   "devDependencies": {
-    "matchstick-as": "0.5.0"
+    "matchstick-as": "0.5.2"
   }
 }
